--- a/src/main/resources/templates/3xx.html
+++ b/src/main/resources/templates/3xx.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,5 +6,6 @@
 </head>
 <body>
     <p>3xx Error</p>
+    <p th:text="${status}"></p>
 </body>
 </html>
