--- a/src/main/resources/templates/layout/top.html
+++ b/src/main/resources/templates/layout/top.html
@@ -5,11 +5,8 @@
         <div class="container">
             <a class="text-light" href="#"><h4>Spring Security World</h4></a>
             <ul class="nav justify-content-end">
-<!--                <li class="nav-item" sec:authorize="isAnonymous()" ><a class="nav-link text-light" th:href="@{/login}">로그인</a></li>-->
-<!--                &lt;!&ndash; 로그아웃 버튼 추가 &ndash;&gt;-->
-<!--                <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link text-light" th:href="@{/logout}">로그아웃</a></li>-->
-<!--                <li class="nav-item" sec:authorize="isAnonymous()"><a class="nav-link text-light" th:href="@{/users}">회원가입</a></li>-->
-<!--                <li class="nav-item" ><a class="nav-link text-light" href="/">HOME</a></li>-->
+                <li class="nav-item" sec:authorize="hasRole('ADMIN')"><a class="nav-link text-light" th:href="@{/admin/roles}">권한 관리</a></li>
+                <li class="nav-item" sec:authorize="hasRole('ADMIN')"><a class="nav-link text-light" th:href="@{/admin/my-page}">내정보</a></li>
             </ul>
         </div>
     </nav>
